[package]
name = "rust_sphincs"
version = "0.1.0"
edition = "2024"

[dependencies]
hex-literal = "1.1.0"
log = "0.4.29"
rand = "0.9.2"
rayon = "1.11.0"
sha2 = "0.10.9"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "random_generator_bench"
harness = false
